Enable at rest enc

--- a/docker-enterprise/mongod.conf
+++ b/docker-enterprise/mongod.conf
@@ -19,8 +19,8 @@ processManagement:
 net:
   port: 27017
   bindIp: 0.0.0.0  # Listen to local interface only, comment to listen on all interfaces.
-#  ssl:
-#    FIPSMode: true
+  ssl:
+    FIPSMode: true
 #    mode: preferSSL
 #    PEMKeyFile: /etc/ssl/server.pem
 #    CAFile: /etc/ssl/ca.crt
