--- a/certificates/certs.env
+++ b/certificates/certs.env
@@ -2,9 +2,6 @@ export C=US
 export ST=Georgia
 export L=Atlanta
 export O=Simagix
-export OU_SERVER=DEV
-export OU_CLIENT=Consulting
-export CN_SERVER=localhost
-export CN_CLIENT=ken.chen
-export EMAIL_ADM=admin@simagix.com
-export EMAIL_CLIENT=ken.chen@simagix.com
+export OU_SERVER=Servers
+export OU_USER=Users
+export CN_USER=ken.chen@simagix.com
